added low-fi test imgs

--- a/pomolo.html
+++ b/pomolo.html
@@ -344,7 +344,7 @@
                   <div class="col-lg-12" style="margin-bottom:-70px;">
                     <div class="portfolio-details-slider swiper">
                       <h2 style="text-align:center; font-family:Amiko; font-weight:600; font-size:12px;	color: #177add; margin-bottom:20px;"> LOW-FIDELITY MOBILE SKETCH </h2>
-                      <img src="assets/img/portfolio/low1.png" alt="" style="width:100%;">
+                      <img src="assets/img/portfolio/low1.png" alt="" style="width:80%;">
                     </div>
                   </div>
                 </section>
@@ -354,7 +354,7 @@
                   <div class="col-lg-12" style="margin-bottom:-30px;">
                     <div class="portfolio-details-slider swiper">
                       <h2 style="text-align:center; font-family:Amiko; font-weight:600; font-size:12px;	color: #177add; margin-bottom:20px;"> LOW-FIDELITY MOBILE PROTOTYPE </h2>
-                      <img src="assets/img/portfolio/low2.png" alt="" style="width:100%;">
+                      <img src="assets/img/portfolio/low2.png" alt="" style="width:80%;">
                     </div>
                   </div>
                 </section>
@@ -371,7 +371,7 @@
                   remaining of my responsive pages.
                 </p>
 
-                                <!-- ======= Sitemap 3 col imgs ======= -->
+                <!-- ======= low-fi test notes (2) col imgs ======= -->
                 <section id="portfolio-details" class="portfolio-details">
                   <section id="portfolio-details" class="portfolio-details" style="margin-top:70px; margin-bottom:-100px;">
                    <div class="container" style="width:100%; margin-bottom:50px; display:grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); grid-gap:50px;">
@@ -383,12 +383,19 @@
 
                     <div class="box" style="width:88%; position:relative;">
                       <h2 style="text-align:center; font-family:Amiko; font-weight:600; font-size:12px;	color: #177add; margin-bottom:20px;"> (UPDATED) LOW-FIDELITY MOBILE SKETCH </h2>
-                      <img src="assets/img/portfolio/lowtest3.png" style="width:100%;" alt="">
+                      <img src="assets/img/portfolio/lowtest1.png" style="width:100%;" alt="">
                     </div>
-
-                    
                       
                   </div> 
+                </section>
+
+                <section id="portfolio-details" class="portfolio-details" style="margin-top:50px; margin-bottom:80px;">
+                  <div class="col-lg-12" style="margin-bottom:-30px;">
+                    <div class="portfolio-details-slider swiper">
+                      <h2 style="text-align:center; font-family:Amiko; font-weight:600; font-size:12px;	color: #177add; margin-bottom:20px;"> (UPDATED) LOW-FIDELITY MOBILE PROTOTYPE </h2>
+                      <img src="assets/img/portfolio/lowtest2c.png" alt="" style="width:100%;">
+                    </div>
+                  </div>
                 </section>
 
 
