proj surface changes

--- a/aboutme.html
+++ b/aboutme.html
@@ -51,7 +51,7 @@
 <body>
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top header-inner-pages">
-    <div class="container d-flex align-items-center justify-content-between">
+    <div class="container d-flex align-items-center justify-content-between" style="margin-top:8px;">
 
       <h1 class="logo"><a href="index.html" title="Home">  IRENE LUE </a> </h1>
       <!-- Uncomment below if you prefer to use an image logo -->
@@ -60,9 +60,9 @@
       <nav id="navbar" class="navbar">
         <ul>
           <!-- <li><a class="nav-link scrollto" href="index.html">Home</a></li> -->
-          <li><a href="index.html" title="WORK">WORK</a></li>
-          <li><a href="aboutme.html" title="ABOUT">ABOUT</a></li>
-          <li><a href="https://drive.google.com/file/d/1_ialEN1zfUCsRebA_rtQcwa_nj8M3U-D/view?usp=sharing" title="RESUME" target="_blank">RESUME</a></li>
+          <li><a href="index.html">PROJECTS</a></li>
+          <li><a href="aboutme.html">ABOUT</a></li>
+          <li><a href="https://drive.google.com/file/d/1_ialEN1zfUCsRebA_rtQcwa_nj8M3U-D/view?usp=sharing" target="_blank">RESUME</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav> <!-- .navbar -->
@@ -190,7 +190,7 @@
                       <div class="books-list">
                         <ol>
                           <li> Strength-training </li>
-                          <li> Reading </li>
+                          <li> Photography </li>
                           <li> Sketching </li>
                         </ol>
                       </div>
@@ -250,8 +250,8 @@
                       <div class="books-list">
                         <ol>
                           <li> Animation </li>    
-                          <li> Piano </li>                       
-                          <li> Mandarin </li> 
+                          <li> Mandarin </li>                       
+                          <li> Growth Mindset </li> 
                         </ol>
                       </div>
                       <div class="image_overlay">
@@ -371,6 +371,8 @@
             </div>
           </div>
           <!-- end of Instagram container -->
+
+          
       
           <!-- ========== Instagram format 2 ========== -->
 <!--                 <div class="instagram-container">
