--- a/pomolo.html
+++ b/pomolo.html
@@ -193,7 +193,11 @@
                 <p>
                   Introducing Pomolo, a time management system app that 
                   encourages students to work and think deeply.
-                  Pomolo offers a multifunctional onboarding process that's
+                  Pomolo's onboarding process only requires the simplest of  quick, easy, and 
+                  simple. 
+
+                  
+                  offers a multifunctional onboarding process that's
                   quick, easy, and compatible on mobile, tablet, and desktop 
                   platforms. To provide the best signup and login experience for 
                   students, I sought out to deliver a solution that would leave 
