--- a/index.html
+++ b/index.html
@@ -66,16 +66,16 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <h1 class="logo"><a href="index.html" title="Home">  IRENE LUE </a> </h1>
+      <h1 class="logo"><a href="index.html" title="Irene Lue">  IRENE LUE </a> </h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
       <nav id="navbar" class="navbar">
         <ul>
           <!-- <li><a class="nav-link scrollto active" href="#hero">Home</a></li> -->
-          <li><a class="nav-link scrollto" href="#portfolio" title="Work">WORK</a></li>
-          <li><a href="aboutme.html" title="About">ABOUT</a></li>
-          <li><a href="https://drive.google.com/file/d/1_ialEN1zfUCsRebA_rtQcwa_nj8M3U-D/view?usp=sharing" title="Resume" target="_blank">RESUME</a></li>
+          <li><a class="nav-link scrollto" href="#portfolio">PROJECTS</a></li>
+          <li><a href="aboutme.html">ABOUT</a></li>
+          <li><a href="https://drive.google.com/file/d/1_ialEN1zfUCsRebA_rtQcwa_nj8M3U-D/view?usp=sharing" target="_blank">RESUME</a></li>
           <!-- <li><a href="blog.html">Blog</a></li> -->
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
@@ -122,7 +122,7 @@
     <div class="hero-container">
       <br> <br>
       <h1 class="logo"><a href="index.html" title="Home">  IRENE LUE </a> </h1>
-      <h1> Hello! I'm Irene 👋 </h1>
+      <h1> Hi, I'm Irene! 👋 </h1>
 
       <!-- HEADER ROTATOR REMOVED STARTING HERE -->
       <h2> Recent Computer Science graduate from UC San Diego and 
@@ -151,10 +151,10 @@
           <div class="col-lg-4 col-md-6 portfolio-item" class="img-fluid">
             <a href="under_construction.html" target="blank">
               <div class="image">
-                <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/portfolio-3.jpg" style="border-radius:10px;" class="img-fluid" alt="">
                 <div class="image_overlay">
-                    <div class="image_title"> Covid-Code: Redesign </div>
-                    <p class="image_description"> UX/UI Case Study
+                    <div class="image_title"> Pomolo </div>
+                    <p class="image_description"> Mobile, UX, Concept
                 </div>
               </div>
             </a>
@@ -173,11 +173,11 @@
           <!-- Proj 2 -->
           <div class="col-lg-4 col-md-6 portfolio-item" class="img-fluid">
             <a href="under_construction.html" target="blank">
-              <div class="image">
-                <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+              <div class="image" >
+                <img src="assets/img/portfolio/portfolio-2.jpg" style="border-radius:10px;" class="img-fluid" alt="">
                 <div class="image_overlay">
-                    <div class="image_title"> The Login and Signup Process </div>
-                    <p class="image_description"> UX/UI Case Study
+                    <div class="image_title"> Pomolo's <br> Onboarding Process </div>
+                    <p class="image_description"> Mobile, UX, Concept
                     </p>
                 </div>
               </div>
@@ -188,10 +188,10 @@
           <div class="col-lg-4 col-md-6 portfolio-item" class="img-fluid">
             <a href="under_construction.html" target="blank">
               <div class="image">
-                <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/portfolio-1.jpg" style="border-radius:10px;" class="img-fluid" alt="">
                 <div class="image_overlay">
-                    <div class="image_title"> Covid-Code </div>
-                    <p class="image_description"> UX/UI Case Study
+                    <div class="image_title"> Covid-Code Redesign </div>
+                    <p class="image_description"> Mobile, UX, Concept
                 </div>
               </div>
             </a>
