need to edit home page

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
               <div class="image" >
                 <img src="assets/img/portfolio/portfolio-2.jpg" style="border-radius:10px;" class="img-fluid" alt="">
                 <div class="image_overlay">
-                    <div class="image_title"> Pomolo's <br> Onboarding Process </div>
+                    <div class="image_title"> Onboarding Process </div>
                     <p class="image_description"> Mobile, UX, Concept
                     </p>
                 </div>
