updated home page

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
   <link rel="preconnect" href="https://fonts.googleapis.com"> 
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
 
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@450&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;450&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@400;500;600&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Amiko:wght@400;600;650;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Amiko:wght@300;400;500;600;650;700&display=swap" rel="stylesheet">
 
 
   <link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">
@@ -66,7 +66,7 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <h1 class="logo"><a href="index.html" title="Irene Lue">  IRENE LUE </a> </h1>
+      <h1 class="logo"><a href="index.html">  IRENE LUE </a> </h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -75,7 +75,7 @@
           <!-- <li><a class="nav-link scrollto active" href="#hero">Home</a></li> -->
           <li><a class="nav-link scrollto" href="#portfolio">PROJECTS</a></li>
           <li><a href="aboutme.html">ABOUT</a></li>
-          <li><a href="https://drive.google.com/file/d/1_ialEN1zfUCsRebA_rtQcwa_nj8M3U-D/view?usp=sharing" target="_blank">RESUME</a></li>
+          <li><a href="https://drive.google.com/file/d/1_ialEN1zfUCsRebA_rtQcwa_nj8M3U-D/view?usp=sharing" target="_blank">RESUMÉ</a></li>
           <!-- <li><a href="blog.html">Blog</a></li> -->
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
@@ -130,16 +130,12 @@
 
       <div class="container" style="margin-left:0px; margin-top:20px;">
         <div class="row">
-          <div class="column" style="text-align:center; width:10%; border-radius:10px;border:1.5px solid #000000;">
-            <a href="aboutme.html" target="_blank">Read more</a></li>
-          </div>
-          <div class="column" style="width:10%;">
 
-          </div>
+          <a class="button-box" href="aboutme.html" target="_blank"> Read more </a>
 
-          <div class="column" style="text-align:center; width:10%; border-radius:10px;border:1.5px solid #000000;">
-            <a href="https://drive.google.com/file/d/1_ialEN1zfUCsRebA_rtQcwa_nj8M3U-D/view?usp=sharing" target="_blank">Resumé</a></li>
-          </div>
+          <div class="column" style="width:5%;"></div>
+
+          <a class="button-box" href="https://drive.google.com/file/d/1_ialEN1zfUCsRebA_rtQcwa_nj8M3U-D/view?usp=sharing" target="_blank">Resumé</a></li>
 
         </div>
       </div>
@@ -169,7 +165,7 @@
                 <img src="assets/img/portfolio/portfolio-3.jpg" style="border-radius:10px;" class="img-fluid" alt="">
                 <div class="image_overlay">
                     <div class="image_title"> Pomolo </div>
-                    <p class="image_description"> Mobile, UX, Concept
+                    <p class="image_description"> Mobile, User Research, UX, Visual Design
                 </div>
               </div>
             </a>
@@ -191,8 +187,8 @@
               <div class="image" >
                 <img src="assets/img/portfolio/portfolio-2.jpg" style="border-radius:10px;" class="img-fluid" alt="">
                 <div class="image_overlay">
-                    <div class="image_title"> Onboarding Process </div>
-                    <p class="image_description"> Mobile, UX, Concept
+                    <div class="image_title"> Pomolo: <br> Signup & Login </div>
+                    <p class="image_description"> Mobile, User Research, UX, Visual Design
                     </p>
                 </div>
               </div>
@@ -205,7 +201,7 @@
               <div class="image">
                 <img src="assets/img/portfolio/portfolio-1.jpg" style="border-radius:10px;" class="img-fluid" alt="">
                 <div class="image_overlay">
-                    <div class="image_title"> Covid-Code Redesign </div>
+                    <div class="image_title"> Covid-Code <br> Redesign </div>
                     <p class="image_description"> Mobile, UX, Concept
                 </div>
               </div>
