--- a/pomolo.html
+++ b/pomolo.html
@@ -67,9 +67,9 @@
       <nav id="navbar" class="navbar">
         <ul>
           <!-- <li><a class="nav-link scrollto active" href="#hero">Home</a></li> -->
-          <li><a class="nav-link scrollto" href="#portfolio" title="Work">WORK</a></li>
-          <li><a href="aboutme.html" title="About">ABOUT</a></li>
-          <li><a href="https://drive.google.com/file/d/1_ialEN1zfUCsRebA_rtQcwa_nj8M3U-D/view?usp=sharing" title="Resume" target="_blank">RESUME</a></li>
+          <li><a class="nav-link scrollto" href="#portfolio">PROJECTS</a></li>
+          <li><a href="aboutme.html">ABOUT</a></li>
+          <li><a href="https://drive.google.com/file/d/1_ialEN1zfUCsRebA_rtQcwa_nj8M3U-D/view?usp=sharing" target="_blank">RESUMÉ</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav> <!-- .navbar -->
@@ -108,7 +108,7 @@
               </h2>
 
               <h2 class="subtitle1" style="width:50%;line-height:30px;">
-                USER RESEARCH / UX DESIGN / VISUAL DESIGN 
+                MOBILE / USER RESEARCH / UX DESIGN / VISUAL DESIGN 
               </h2>
 
               <h2 class="subtitle2" style="width:50%;line-height:30px;"">
