--- a/under_construction.html
+++ b/under_construction.html
@@ -84,22 +84,24 @@
 	<body>
 		<!-- ======= Header ======= -->
 		<header id="header" class="fixed-top header-inner-pages">
-			<div class="container d-flex align-items-center justify-content-between">
-				<h1 class="logo"><a href="index.html" title="Home"> IRENE LUE </a></h1>
+			<div
+				class="container d-flex align-items-center justify-content-between"
+				style="margin-top: 8px"
+			>
+				<h1 class="logo"><a href="index.html"> IRENE LUE </a></h1>
 				<!-- Uncomment below if you prefer to use an image logo -->
 				<!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
 				<nav id="navbar" class="navbar">
 					<ul>
 						<!-- <li><a class="nav-link scrollto" href="index.html">Home</a></li> -->
-						<li><a href="index.html" title="Work">WORK</a></li>
-						<li><a href="aboutme.html" title="About">ABOUT</a></li>
+						<li><a href="index.html">PROJECTS</a></li>
+						<li><a href="aboutme.html">ABOUT</a></li>
 						<li>
 							<a
 								href="https://drive.google.com/file/d/1_ialEN1zfUCsRebA_rtQcwa_nj8M3U-D/view?usp=sharing"
-								title="Resume"
 								target="_blank"
-								>RESUME</a
+								>RESUMÉ</a
 							>
 						</li>
 					</ul>
