--- a/aboutme.html
+++ b/aboutme.html
@@ -60,9 +60,11 @@
       <nav id="navbar" class="navbar">
         <ul>
           <!-- <li><a class="nav-link scrollto" href="index.html">Home</a></li> -->
-          <li><a href="index.html">PROJECTS</a></li>
+     
+          <li><a href="index.html#portfolio">PROJECTS</a></li>
           <li><a href="aboutme.html">ABOUT</a></li>
           <li><a href="https://drive.google.com/file/d/1_ialEN1zfUCsRebA_rtQcwa_nj8M3U-D/view?usp=sharing" target="_blank">RESUMÉ</a></li>
+                    <li><a href="photography.html">PHOTOGRAPHY</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav> <!-- .navbar -->
@@ -500,7 +502,8 @@
 
         <div class="me-md-auto text-center">
           <div class="copyright">
-            <h1 style="color:#353535;font-size:12px;letter-spacing:0.5px;margin-bottom:30px;" <span> &copy IRENE LUE 2022 </span> </h1>
+            <h1 style="color:#a8a8a8;font-family:Amiko;font-size:13px; font-weight:600; letter-spacing:1px; margin-top:5px; padding-bottom:5px; "> LUEIRENE@GMAIL.COM </h1>
+            <h1 style="color:#a8a8a8;font-family:Amiko;font-size:12px;letter-spacing:0px;margin-bottom:30px;" <span> &copy IRENE LUE 2022 </span> </h1>
             <!-- <h1 style="color:#4e4e4e;font-size:14px;letter-spacing:0.5px;"<span> Designed and developed by Irene Lue </span></h1> -->
           </div>
         </div>
