--- a/under_construction.html
+++ b/under_construction.html
@@ -104,6 +104,7 @@
 								>RESUMÉ</a
 							>
 						</li>
+						<li><a href="photography.html">PHOTOGRAPHY</a></li>
 					</ul>
 					<i class="bi bi-list mobile-nav-toggle"></i>
 				</nav>
