--- a/photography.html
+++ b/photography.html
@@ -140,7 +140,7 @@
               <div class="image">
                 <img src="assets/img/camera/p1.jpg" style="border-radius:10px;" class="img-fluid" alt="">
                 <div class="image_overlay">
-                    <div class="image_title"> Puppy Party </div>
+                    <div class="image_title"> Furry Friends </div>
                 </div>
               </div>
             </a>
