--- a/photography.html
+++ b/photography.html
@@ -138,7 +138,7 @@
           <div class="col-lg-6 col-md-6 portfolio-item" class="img-fluid">
             <a href="grid-gallery.html" target="blank">
               <div class="image">
-                <img src="assets/img/camera/p1.jpg" style="border-radius:10px;" class="img-fluid" alt="">
+                <img src="assets/img/camera/tw0.jpg" style="border-radius:10px;" class="img-fluid" alt="">
                 <div class="image_overlay">
                     <div class="image_title"> Furry Friends </div>
                 </div>
@@ -150,7 +150,7 @@
           <!-- Proj 2 -->
           <div class="col-lg-6 col-md-6 portfolio-item" class="img-fluid">
             <a href="under_construction.html" target="blank">
-              <div class="image" >
+              <div class="image">
                 <img src="assets/img/camera/tw0.jpg" style="border-radius:10px;" class="img-fluid" alt="">
                 <div class="image_overlay">
                     <div class="image_title"> Taiwan </div>
