--- a/photography.html
+++ b/photography.html
@@ -135,7 +135,7 @@
         <br> <br>
         <div class="row portfolio-container">
           <!-- Proj 1: Covid-Code -->
-          <div class="col-lg-6 col-md-6 portfolio-item" class="img-fluid">
+          <div class="col-lg-4 col-md-6 portfolio-item" class="img-fluid">
             <a href="grid-gallery.html" target="blank">
               <div class="image">
                 <img src="assets/img/camera/lc0.jpg" style="border-radius:10px;" class="img-fluid" alt="">
@@ -148,7 +148,7 @@
 
 
           <!-- Proj 2 -->
-          <div class="col-lg-6 col-md-6 portfolio-item" class="img-fluid">
+          <div class="col-lg-4 col-md-6 portfolio-item" class="img-fluid">
             <a href="under_construction.html" target="blank">
               <div class="image">
                 <img src="assets/img/camera/tw0.jpg" style="border-radius:10px;" class="img-fluid" alt="">
@@ -158,6 +158,19 @@
               </div>
             </a>
           </div>
+
+          <!-- Proj 3 -->
+          <div class="col-lg-4 col-md-6 portfolio-item" class="img-fluid">
+            <a href="under_construction.html" target="blank">
+              <div class="image">
+                <img src="assets/img/cam-hawaii/maui0.jpeg" style=" border-radius:10px;" class="img-fluid" alt="">
+                <div class="image_overlay">
+                    <div class="image_title"> Hawaii </div>
+                </div>
+              </div>
+            </a>
+          </div>
+
 
         </div>
 
