--- a/photography.html
+++ b/photography.html
@@ -135,7 +135,7 @@
         <br> <br>
         <div class="row portfolio-container">
           <!-- Proj 1: Covid-Code -->
-          <div class="col-lg-4 col-md-6 portfolio-item" class="img-fluid">
+      <!--     <div class="col-lg-4 col-md-6 portfolio-item" class="img-fluid">
             <a href="grid-gallery.html" target="blank">
               <div class="image">
                 <img src="assets/img/camera/lc0.jpg" style="border-radius:10px;" class="img-fluid" alt="">
@@ -144,7 +144,7 @@
                 </div>
               </div>
             </a>
-          </div>
+          </div> -->
 
 
           <!-- Proj 2 -->
