--- a/photography.html
+++ b/photography.html
@@ -149,11 +149,11 @@
 
           <!-- Proj 2 -->
           <div class="col-lg-4 col-md-6 portfolio-item" class="img-fluid">
-            <a href="under_construction.html" target="blank">
+            <a href="grid-gallery.html" target="blank">
               <div class="image">
-                <img src="assets/img/camera/tw0.jpg" style="border-radius:10px;" class="img-fluid" alt="">
+                <img src="assets/img/camera/lc0.jpg" style="border-radius:10px;" class="img-fluid" alt="">
                 <div class="image_overlay">
-                    <div class="image_title"> Taiwan </div>
+                    <div class="image_title"> Furry Friends </div>
                 </div>
               </div>
             </a>
