--- a/photography.html
+++ b/photography.html
@@ -151,7 +151,7 @@
           <div class="col-lg-4 col-md-6 portfolio-item" class="img-fluid">
             <a href="grid-gallery.html" target="blank">
               <div class="image">
-                <img src="assets/img/camera/lc0.jpg" style="border-radius:10px;" class="img-fluid" alt="">
+                <img src="assets/img/camera/lc0.JPG" style="border-radius:10px;" class="img-fluid" alt="">
                 <div class="image_overlay">
                     <div class="image_title"> Furry Friends </div>
                 </div>
