--- a/aboutme.html
+++ b/aboutme.html
@@ -199,7 +199,7 @@
                         <ol>
                           <li> Strength-training </li>
                           <li> Photography </li>
-                          <li> Sketching </li>
+                          <li> Reading </li>
                         </ol>
                       </div>
                       <div class="image_overlay">
