--- a/pomolo.html
+++ b/pomolo.html
@@ -360,8 +360,10 @@
 
                 <h3> Low-Fidelity Wireframing </h3>
                 <p> During this phase, I updated my site map based on critiques
-                  I gathered from past testing. I then integrated the user flow 
-                  to create initial wireframes and focused on designing its core 
+                  from past peer-to-peer testing and integrated 
+                  the userflow into low-fidelity wireframes. 
+
+                  I focused on designing the userflow and core 
                   pages to visualize and delineate content concepts and layouts. </p>
 
                 <!-- ======= low-fidelity wireframes sketch ======= -->
@@ -387,13 +389,21 @@
 
                 <h3> Low-Fidelity Testing </h3>
                 <p>
-                  I began field testing my wireframes with the 2nd set of users 
-                  that fit within my target market to explore their user 
-                  journeys, preferences, and goals. Introducing these initial 
-                  layout concepts allowed me to gauge my target market's first 
-                  impressions and suggestions for improvement. Based on the user 
-                  feedback I received, I updated my wireframes and compiled the 
-                  remaining of my responsive pages.
+                  Based on critques I gathered, I updated my wireframes and 
+                  began field testing with new users.
+
+                  Before introducing my wireframes, I first
+                  explored my interviewees' user journeys, preferences, 
+                  and goals to gain clarity on big-picture beliefs and ideas. 
+
+                  I then introduced the initial layout concepts and focused on
+                  understanding how my interviewees felt 
+                  about each page. 
+
+                  Based on the user testing and class critiques I received, I 
+                  updated my wireframes and compiled the remaining of the
+                  responsive pages.
+
                 </p>
 
                 <!-- ======= low-fi test notes (2) col imgs ======= -->
