edit prototype test and results

--- a/pomolo.html
+++ b/pomolo.html
@@ -553,7 +553,7 @@
                   </div> 
                 </section>
 
-                <section id="portfolio-details" class="portfolio-details" style="margin-top:20px; margin-bottom:80px;">
+                <section id="portfolio-details" class="portfolio-details" style="margin-top:20px; margin-bottom:20px;">
                   <div class="col-lg-12" style="margin-bottom:-30px;">
                     <div class="portfolio-details-slider swiper">
                       <h2 style="text-align:center; font-family:Amiko; font-weight:600; font-size:15px;	color: #177add; margin-bottom:20px;"> (UPDATED) MID-FIDELITY MOBILE PROTOTYPE </h2>
@@ -572,7 +572,7 @@
                   
 
 
-                <h3> Prototype Test </h3>
+                <h3 style="margin-top:100px;"> Prototype Test </h3>
                 <p> After integrating branding and visuals, I reinterviewed 
                   past users to mine for their mental models and test the 
                   usability of my updated designs. I divided the 
