edit prototype test and results

--- a/pomolo.html
+++ b/pomolo.html
@@ -573,10 +573,15 @@
 
 
                 <h3 style="margin-top:100px;"> Prototype Test </h3>
-                <p> After integrating branding and visuals, I reinterviewed 
-                  past users to mine for their mental models and test the 
-                  usability of my updated designs. I divided the 
-                  interviews into 3 parts: </p>
+                <p> At this stage, I focused only on the usability of my prototype 
+                and performed my last round of user testing. 
+                
+                To visualize a 
+                real-world and initial interaction with my prototype, I provided my
+                interviewees with 4 tasks to complete on their own. 
+                
+                Based on the final critiques and findings I received from my users,
+                I integrated any necessary changes to a newly updated prototype. </p>
 
                 <section id="portfolio-details" class="portfolio-details">
                   <section id="portfolio-details" class="portfolio-details" style="margin-top:60px; margin-bottom:-70px;">
