--- a/photography.html
+++ b/photography.html
@@ -153,7 +153,7 @@
               <div class="image">
                 <img src="assets/img/camera/lc0.JPG" style="border-radius:10px;" class="img-fluid" alt="">
                 <div class="image_overlay">
-                    <div class="image_title"> Furry Friends </div>
+                    <div class="image_title"> The Pack </div>
                 </div>
               </div>
             </a>
