editing prototype test

--- a/pomolo.html
+++ b/pomolo.html
@@ -492,7 +492,7 @@
                     <div class="container" style="width:90%; margin-bottom:50px; display:grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); grid-gap:50px;">
 
                       <div class="box" style="width:100%; position:relative;">
-                        <h2 style="text-align:center; font-family:Amiko; font-weight:600; font-size:15px;	color: #177add; margin-bottom:20px;"> MID-FIDELITY BRANDING SURVEYS </h2>
+                        <h2 style="text-align:center; font-family:Amiko; font-weight:600; font-size:15px;	color: #177add; margin-bottom:20px;"> MID-FIDELITY SURVEYS </h2>
                         <img src="assets/img/portfolio/mid0.png" style="width:100%;" alt="">
                       </div>
                         
@@ -514,9 +514,11 @@
                 <h3> Mid-Fidelity Testing </h3>
                 <p> After integrating branding and visuals, I reinterviewed 
                   past users to mine for their mental models and test the 
-                  usability of my updated designs. I divided the 
-                  interviews into 3 parts: 
-                  <div class="container" style="font-family:Inter; text-indent:0px; color:#535353; font-weight:400;">
+                  usability of the updated designs. Users were asked to complete
+                  4 tasks on their own (i.e. signing up, logging in, 
+                  recovering a username, and resetting a password), and during this process, 
+                  I documented their experience, task success rate, and suggestions for improvement.
+<!--                   <div class="container" style="font-family:Inter; text-indent:0px; color:#535353; font-weight:400;">
                     <ol type = "1" style="line-height:35px; padding-left:3em; margin:0px 0 40px 0px;"> 
                       <li> <b> Pre-testing </b> to delve into users' mental models. </li> 
                       <li> <b> In-testing </b> in which I asked users to complete 4 
@@ -527,7 +529,7 @@
                       <li> <b> Post-testing </b> for collecting feedback about layout 
                         designs, pages, and other visual elements. </li>
                     </ol>
-                  </div>
+                  </div> -->
                 </p> 
 
                 <!-- ======= Sitemap 3 col imgs ======= -->
