--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       <h1> Hello, I'm Irene! 👋 </h1>
 
       <!-- HEADER ROTATOR REMOVED STARTING HERE -->
-      <h3 > Recent Computer Science graduate from UC San Diego and 
+      <h3 > Computer Science graduate from UC San Diego and 
       designer creating digital experiences in Los Angeles, CA. </h3>
 
       <div class="container" style="margin-left:0px; margin-top:20px;">
@@ -185,11 +185,11 @@
 
           <!-- Proj 2 -->
           <div class="col-lg-4 col-md-6 portfolio-item" class="img-fluid">
-            <a href="under_construction.html" target="blank">
+            <a href="pomolo.html" target="blank">
               <div class="image" >
-                <img src="assets/img/portfolio/portfolio-2.jpg" style="border-radius:10px;" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/pomolo.png" style="border-radius:10px;" class="img-fluid" alt="">
                 <div class="image_overlay">
-                    <div class="image_title"> Pomolo: <br> Signup & Login </div>
+                    <div class="image_title"> Signup & Login <br> With Pomolo </div>
                     <p class="image_description"> Mobile, User Research, UX, Visual Design
                     </p>
                 </div>
