--- a/aboutme.html
+++ b/aboutme.html
@@ -100,7 +100,7 @@
                 <!-- <div class="col-lg-3 col-md-6 d-flex align-items-stretch"> -->
                 <div class="member-img">             <!-- class="img-fluid rounded-circle" --> 
                   <br>
-                  <img id="prof-pic" src="assets/img/team/team-00.jpg" class="img-fluid" alt="" style="margin-bottom:50px;"> 
+                  <img id="prof-pic" src="assets/img/team/team-00.jpg" class="img-fluid" alt="" style="border-radius:20px; margin-bottom:50px;"> 
                 
                 </div>
               </div>
@@ -193,7 +193,7 @@
                   <!-- pic 1 -->
                   <div class="column" class="img-fluid">
                     <div class="image">
-                      <img src="assets/img/things/hobbies.jpg" class="img-fluid" alt="">             
+                      <img src="assets/img/things/hobbies.jpg" class="img-fluid" alt="" style="border-radius:10px;">             
                       <div class="books-middle"> HOBBIES </div>
                       <div class="books-list">
                         <ol>
@@ -202,7 +202,7 @@
                           <li> Reading </li>
                         </ol>
                       </div>
-                      <div class="image_overlay">
+                      <div class="image_overlay2">
                         <div class="image_title3">🤍</div>
                       </div>
                     </div>
@@ -210,7 +210,7 @@
                   <!-- pic 2 -->
                   <div class="column" class="img-fluid">
                     <div class="image">
-                      <img src="assets/img/things/books.jpg" class="img-fluid" alt="">
+                      <img src="assets/img/things/books.jpg" class="img-fluid" alt="" style="border-radius:10px;">
                       <div class="books-middle"> BOOKS </div>
                       <div class="books-list">
                         <ol>
@@ -219,7 +219,7 @@
                           <li> Can't Hurt Me </li>
                         </ol>
                       </div>
-                      <div class="image_overlay">
+                      <div class="image_overlay2">
                         <div class="image_title3">📖</div>
                       </div>
                       <!-- <div class="image_overlay">
@@ -230,7 +230,7 @@
                   <!-- pic 3 -->
                   <div class="column" class="img-fluid">
                     <div class="image">
-                      <img src="assets/img/things/movies.jpg" class="img-fluid" alt="">
+                      <img src="assets/img/things/movies.jpg" class="img-fluid" alt="" style="border-radius:10px;">
                       <div class="books-middle"> FILMS </div>
                       <div class="books-list">
                         <ol>
@@ -239,7 +239,7 @@
                           <li> From Up On Poppy Hill </li>
                         </ol>
                       </div>
-                      <div class="image_overlay">
+                      <div class="image_overlay2">
                         <div class="image_title3">🎞</div>
                       </div>
                       <!-- <div class="image_overlay">
@@ -250,7 +250,7 @@
                   <!-- pic 4 -->
                   <div class="column" class="img-fluid">
                     <div class="image">
-                      <img src="assets/img/things/anime.jpg" class="img-fluid" alt="">
+                      <img src="assets/img/things/anime.jpg" class="img-fluid" alt="" style="border-radius:10px;">
                       <div class="books-middle"> LEARNING </div>
                       <!-- <div class="image_overlay">
                           <div class="image_title2">BOOKS</div>
@@ -262,7 +262,7 @@
                           <li> Animation </li> 
                         </ol>
                       </div>
-                      <div class="image_overlay">
+                      <div class="image_overlay2">
                         <div class="image_title3">💡</div>
                       </div>
                     </div>
@@ -270,7 +270,7 @@
                   <!-- pic 5 -->
                   <div class="column" class="img-fluid">
                     <div class="image">
-                      <img src="assets/img/things/quotes.jpg" class="img-fluid" alt="">
+                      <img src="assets/img/things/quotes.jpg" class="img-fluid" alt="" style="border-radius:10px;">
                       <div class="books-middle"> CAUSES </div>
                       <!-- <div class="image_overlay">
                           <div class="image_title2">BOOKS</div>
@@ -282,7 +282,7 @@
                           <li> Animal Welfare </li>
                         </ol> 
                       </div>
-                      <div class="image_overlay">
+                      <div class="image_overlay2">
                         <div class="image_title3">🌎</div>
                       </div>
                     </div>
@@ -307,8 +307,8 @@
                   <div class="column" class="img-fluid">
                     <a href="https://www.instagram.com/p/CZgd6uiLW6u/" target="blank">
                       <div class="image">
-                        <img src="assets/img/insta/waikiki.jpg" class="img-fluid" alt="">
-                        <div class="image_overlay">
+                        <img src="assets/img/insta/waikiki.jpg" class="img-fluid" alt="" style="border-radius:10px;">
+                        <div class="image_overlay2">
                           <div class="image_title2">☀️🤍🌊</div>
                         </div>
                       </div>
@@ -319,8 +319,8 @@
                   <div class="column" class="img-fluid">
                     <a href="https://www.instagram.com/p/CYYXa_yralI/" target="blank">
                       <div class="image">
-                        <img src="assets/img/insta/haleakala.jpg" class="img-fluid" alt="">
-                        <div class="image_overlay">
+                        <img src="assets/img/insta/haleakala.jpg" class="img-fluid" alt="" style="border-radius:10px;">
+                        <div class="image_overlay2">
                             <div class="image_title2">ON TOP OF THE WORLD W THELMA & LOUISE!</div>
                         </div>
                       </div>
@@ -331,8 +331,8 @@
                   <div class="column" class="img-fluid">
                     <a href="https://www.instagram.com/p/CQKL4pJlyqx/" target="blank">
                       <div class="image">
-                        <img src="assets/img/insta/grad.jpg" class="img-fluid" alt="">
-                        <div class="image_overlay">
+                        <img src="assets/img/insta/grad.jpg" class="img-fluid" alt="" style="border-radius:10px;">
+                        <div class="image_overlay2">
                             <div class="image_title2">THAT'S THAT! <br> THANK YOU SD! 🎓🔱💛</div>
                         </div>
                       </div>
@@ -343,7 +343,7 @@
                   <div class="column" class="img-fluid"><a href="https://www.instagram.com/p/BJYBuEwA4Fj/" target="blank">
                       <div class="image">
                         <img src="assets/img/insta/taiwan.jpg" class="img-fluid" alt="">
-                        <div class="image_overlay">
+                        <div class="image_overlay2">
                             <div class="image_title2"> 💙🇹🇼❤️</div>
                         </div>
                       </div>
@@ -355,8 +355,8 @@
                   <div class="column" class="img-fluid">
                     <a href="https://www.instagram.com/p/BPJB8NdA20j/" target="blank">
                       <div class="image">
-                        <img src="assets/img/insta/post5.jpg" class="img-fluid" alt="">
-                        <div class="image_overlay">
+                        <img src="assets/img/insta/post5.jpg" class="img-fluid" alt="" style="border-radius:10px;">
+                        <div class="image_overlay2">
                             <div class="image_title2">MY SWEET GIRL🤍</div>
                         </div>
                       </div>
