--- a/pomolo.html
+++ b/pomolo.html
@@ -105,7 +105,7 @@
 
             <article class="entry entry-single">
               <h2 class="title1">
-                The Login and Signup <br> Process for Pomolo
+                Signup and Login <br> with Pomolo
               </h2>
 
               <h2 class="subtitle1" style="width:50%;line-height:30px;">
