changed photography links

--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
           <!-- <li><a class="nav-link scrollto active" href="#hero">Home</a></li> -->
           <li><a class="nav-link scrollto" href="#portfolio">PROJECTS</a></li>
           <li><a href="aboutme.html">ABOUT</a></li>
-          <li><a href="https://drive.google.com/file/d/1_ialEN1zfUCsRebA_rtQcwa_nj8M3U-D/view?usp=sharing" target="_blank">RESUMÉ</a></li>
-                    <li><a href="photography.html">PHOTOGRAPHY</a></li>
+          <li><a href="https://drive.google.com/file/d/1_ialEN1zfUCsRebA_rtQcwa_nj8M3U-D/view?usp=sharing" target="_blank">RESUME</a></li>
+                    <li><a href="grid-gallery.html">PHOTOGRAPHY</a></li>
           
           <!-- <li><a href="blog.html">Blog</a></li> -->
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
@@ -185,7 +185,7 @@
 
           <!-- Proj 2 -->
           <div class="col-lg-4 col-md-6 portfolio-item" class="img-fluid">
-            <a href="pomolo.html" target="blank">
+            <a href="pomolo.html">
               <div class="image" >
                 <img src="assets/img/portfolio/pomolo.png" style="border-radius:10px;" class="img-fluid" alt="">
                 <div class="image_overlay">
@@ -199,7 +199,7 @@
 
           <!-- Proj 3 -->
           <div class="col-lg-4 col-md-6 portfolio-item" class="img-fluid">
-            <a href="under_construction.html" target="blank">
+            <a href="under_construction.html">
               <div class="image">
                 <img src="assets/img/portfolio/portfolio-1.jpg" style="border-radius:10px;" class="img-fluid" alt="">
                 <div class="image_overlay">
@@ -280,7 +280,7 @@
       <div class="section-contact-port">
         <div class="me-md-auto text-center">
           <div class="email">
-            <!-- <a href="mailto: irenelue01@gmail.com" class="class1" target="_blank" title="Email"><i class="fas fa-paper-plane" ></i></a> -->
+          <!-- <a href="mailto: irenelue01@gmail.com" class="class1" target="_blank" title="Email"><i class="fas fa-paper-plane" ></i></a> -->
             <a href="https://www.linkedin.com/in/irenelue/" class="class1" target="_blank" class="linkedin" title="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
             <a href="https://github.com/irenelue" class="class1" target="_blank" class="github" title="GitHub"><i class="bi bi-github"></i></a>
             <!-- <a href="https://dribbble.com/irenelue/collections" class="class1" target="_blank" title="Dribbble"><i class="fab fa-dribbble"></i></a> -->
