--- a/aboutme.html
+++ b/aboutme.html
@@ -63,8 +63,8 @@
      
           <li><a href="index.html#portfolio">PROJECTS</a></li>
           <li><a href="aboutme.html">ABOUT</a></li>
-          <li><a href="https://drive.google.com/file/d/1_ialEN1zfUCsRebA_rtQcwa_nj8M3U-D/view?usp=sharing" target="_blank">RESUMÉ</a></li>
-                    <li><a href="photography.html">PHOTOGRAPHY</a></li>
+          <li><a href="https://drive.google.com/file/d/1_ialEN1zfUCsRebA_rtQcwa_nj8M3U-D/view?usp=sharing" target="_blank">RESUME</a></li>
+                    <li><a href="grid-gallery.html">PHOTOGRAPHY</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav> <!-- .navbar -->
