--- a/grid-gallery.html
+++ b/grid-gallery.html
@@ -72,7 +72,7 @@
           <!-- <li><a class="nav-link scrollto active" href="#hero">Home</a></li> -->
           <li><a href="index.html#portfolio">PROJECTS</a></li>
           <li><a href="aboutme.html">ABOUT</a></li>
-          <li><a href="https://drive.google.com/file/d/1_ialEN1zfUCsRebA_rtQcwa_nj8M3U-D/view?usp=sharing" target="_blank">RESUMÉ</a></li>
+          <li><a href="https://drive.google.com/file/d/1_ialEN1zfUCsRebA_rtQcwa_nj8M3U-D/view?usp=sharing" target="_blank">RESUME</a></li>
           <li><a href="photography.html">PHOTOGRAPHY</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
