--- a/under_construction.html
+++ b/under_construction.html
@@ -101,10 +101,10 @@
 							<a
 								href="https://drive.google.com/file/d/1_ialEN1zfUCsRebA_rtQcwa_nj8M3U-D/view?usp=sharing"
 								target="_blank"
-								>RESUMÉ</a
+								>RESUME</a
 							>
 						</li>
-						<li><a href="photography.html">PHOTOGRAPHY</a></li>
+						<li><a href="grid-gallery.html">PHOTOGRAPHY</a></li>
 					</ul>
 					<i class="bi bi-list mobile-nav-toggle"></i>
 				</nav>
