--- a/grid-gallery.html
+++ b/grid-gallery.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="style.css" media="all">
 
 
-  <title>Irene Lue</title>
+  <title>Photography • Irene Lue</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
