--- a/under_construction.html
+++ b/under_construction.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-		<title>Irene Lue</title>
+		<title>Under Construction • Irene Lue</title>
 		<meta content="" name="description" />
 		<meta content="" name="keywords" />
 
