need to update vids

--- a/index.html
+++ b/index.html
@@ -164,9 +164,9 @@
           <div class="col-lg-4 col-md-6 portfolio-item" class="img-fluid">
             <a href="under_construction.html" target="blank">
               <div class="image">
-                <img src="assets/img/portfolio/portfolio-3.jpg" style="border-radius:10px;" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/pomolo2.png" style="border-radius:10px;" class="img-fluid" alt="">
                 <div class="image_overlay">
-                    <div class="image_title"> Pomolo </div>
+                    <div class="image_title"> COMING SOON </div>
                     <p class="image_description"> Mobile, User Research, UX, Visual Design
                 </div>
               </div>
@@ -198,7 +198,7 @@
           </div>
 
           <!-- Proj 3 -->
-          <div class="col-lg-4 col-md-6 portfolio-item" class="img-fluid">
+<!--           <div class="col-lg-4 col-md-6 portfolio-item" class="img-fluid">
             <a href="under_construction.html">
               <div class="image">
                 <img src="assets/img/portfolio/portfolio-1.jpg" style="border-radius:10px;" class="img-fluid" alt="">
@@ -208,7 +208,7 @@
                 </div>
               </div>
             </a>
-          </div> <!-- End: Proj 3-->
+          </div> --> <!-- End: Proj 3-->
         </div>
         
         <!-- adding let's get in touch box -->
