--- a/pomolo.html
+++ b/pomolo.html
@@ -654,7 +654,7 @@
                   
 
 
-                <h3 style="margin-top:120px;"> PROTOTYPE TEST </h3>
+                <h3 style="margin-top:120px;"> PROTOTYPE TEST & WIREFLOW </h3>
                 <p> At this stage, my main focus was testing the updated prototype's
                   usability and performing one last round of testing. 
                 
@@ -672,16 +672,12 @@
                       <div class="portfolio-details-slider swiper">
                         <div class="swiper-wrapper align-items-center">
 
-                          <div class="swiper-slide" style="position:relative;" >
-                            <img src="assets/img/portfolio/midtest3.png" alt="">
+                          <div class="swiper-slide">
+                            <img src="assets/img/portfolio/midtest6.png" alt="" style="width:90%;">
                           </div>
 
                           <div class="swiper-slide">
-                            <img src="assets/img/portfolio/midtest4.png" alt="" style="width:80%;">
-                          </div>
-
-                          <div class="swiper-slide">
-                            <img src="assets/img/portfolio/midtest5.png" alt="">
+                            <img src="assets/img/portfolio/midtest7.png" alt="" style="width:90%;">
                           </div>
                         </div>
 
