--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@
             <a href="under_construction.html" target="blank">
               <div class="image">
                 <img src="assets/img/portfolio/pomolo2.png" style="border-radius:10px;" class="img-fluid" alt="">
-                <div class="image_overlay">
-                    <div class="image_title"> COMING SOON </div>
+                <div class="image_overlay2">
+                    <div class="image_title"> Coming Soon </div>
                     <p class="image_description"> Mobile, User Research, UX, Visual Design
                 </div>
               </div>
@@ -188,7 +188,7 @@
             <a href="pomolo.html">
               <div class="image" >
                 <img src="assets/img/portfolio/pomolo.png" style="border-radius:10px;" class="img-fluid" alt="">
-                <div class="image_overlay">
+                <div class="image_overlay2">
                     <div class="image_title"> Signup & Login <br> With Pomolo </div>
                     <p class="image_description"> Mobile, User Research, UX, Visual Design
                     </p>
