--- a/aboutme.html
+++ b/aboutme.html
@@ -63,7 +63,7 @@
      
           <li><a href="index.html#portfolio">PROJECTS</a></li>
           <li><a href="aboutme.html">ABOUT</a></li>
-          <li><a href="https://drive.google.com/file/d/1_ialEN1zfUCsRebA_rtQcwa_nj8M3U-D/view?usp=sharing" target="_blank">RESUME</a></li>
+          <li><a href="https://drive.google.com/file/d/1kO4Jx7gT8MlavwfYnLm1NI6rxOjkyGg1/view?usp=sharing" target="_blank">RESUME</a></li>
                     <li><a href="grid-gallery.html">PHOTOGRAPHY</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -236,7 +236,7 @@
                         <ol>
                           <li> Harry Potter </li>
                           <li> Pursuit of Happyness </li>
-                          <li> From Up On Poppy Hill </li>
+                          <li> Kimi No Na Wa </li>
                         </ol>
                       </div>
                       <div class="image_overlay2">
@@ -258,8 +258,8 @@
                       <div class="books-list">
                         <ol>
                           <li> Mandarin </li>    
-                          <li> Piano </li>                       
-                          <li> Animation </li> 
+                          <li> Animation </li>                       
+                          <li> Piano </li> 
                         </ol>
                       </div>
                       <div class="image_overlay2">
