--- a/index.html
+++ b/index.html
@@ -164,9 +164,9 @@
           <div class="col-lg-4 col-md-6 portfolio-item" class="img-fluid">
             <a href="under_construction.html" target="blank">
               <div class="image">
-                <img src="assets/img/portfolio/pomolo2.png" style="border-radius:10px;" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/pomolo_2.png" style="border-radius:10px;" class="img-fluid" alt="">
                 <div class="image_overlay2">
-                    <div class="image_title"> Coming Soon </div>
+                    <div class="image_title"> Pomolo </div>
                     <p class="image_description"> Mobile, User Research, UX, Visual Design
                 </div>
               </div>
