--- a/aboutme.html
+++ b/aboutme.html
@@ -251,15 +251,15 @@
                   <div class="column" class="img-fluid">
                     <div class="image">
                       <img src="assets/img/things/anime.jpg" class="img-fluid" alt="" style="border-radius:10px;">
-                      <div class="books-middle"> LEARNING </div>
+                      <div class="books-middle"> PRACTICING </div>
                       <!-- <div class="image_overlay">
                           <div class="image_title2">BOOKS</div>
                       </div> -->
                       <div class="books-list">
                         <ol>
                           <li> Mandarin </li>    
-                          <li> Animation </li>                       
-                          <li> Piano </li> 
+                          <li> Endurance Running </li>                       
+                          <li> Animation </li> 
                         </ol>
                       </div>
                       <div class="image_overlay2">
