--- a/aboutme.html
+++ b/aboutme.html
@@ -117,7 +117,7 @@
               <div class ="about-paragraph2">
                 Nice to meet you, I'm Irene! I’m a Computer Science 
                 graduate from UC San Diego and UX designer in training. I'm 
-                currently studying under UCLA'S UX Design program and working on 
+                currently studying under UCLA's UX Design program and working on 
                 projects in product design and web development.
                 </div>
                 
