--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
           <div class="column" style="width:2%;"></div>
 
-          <a class="button-box" href="https://drive.google.com/file/d/1_ialEN1zfUCsRebA_rtQcwa_nj8M3U-D/view?usp=sharing" target="_blank">Resumé</a></li>
+          <a class="button-box" href="https://drive.google.com/file/d/1kO4Jx7gT8MlavwfYnLm1NI6rxOjkyGg1/view?usp=sharing" target="_blank">Resume</a></li>
 
         </div>
       </div>
