editing pomolo signup

--- a/pomolo.html
+++ b/pomolo.html
@@ -109,7 +109,7 @@
               </h2>
 
               <h2 class="subtitle1">
-                MOBILE / USER RESEARCH / UX DESIGN / VISUAL DESIGN 
+                SOLO STUDENT PROJECT FOR UCLA UX DESIGN PROGRAM 
               </h2>
 
               <h2 class="subtitle2">
