--- a/pomolo.html
+++ b/pomolo.html
@@ -1035,7 +1035,7 @@
                     daunting it’ll seem! 
                     </li>
 
-                    <li style="margin-top:15px;"> <b> c)	User research isn’t only about improving designs</b> <br>
+                    <li style="margin-top:15px;"> <b> User research isn’t only about improving designs</b> <br>
                     i)	It’s also about getting to know your users! Take this 
                     opportunity to learn about how your users think, understand 
                     where they’re coming from, and remove any biases. Don’t limit 
