--- a/pomolo.html
+++ b/pomolo.html
@@ -1036,7 +1036,7 @@
                     </li>
 
                     <li style="margin-top:15px;"> <b> User research isn’t only about improving designs</b> <br>
-                    i)	It’s also about getting to know your users! Take this 
+                    It’s also about getting to know your users! Take this 
                     opportunity to learn about how your users think, understand 
                     where they’re coming from, and remove any biases. Don’t limit 
                     yourself to only focusing on identifying pain points or what 
