--- a/pomolo.html
+++ b/pomolo.html
@@ -1007,7 +1007,7 @@
 
                 <h3 style="margin-top:10%;"> REFLECTION </h3>
                 <p> 
-                  I thought I knew all
+                  Prior to this class, I thought I knew all
                   there was to a successful login and signup process. 
                   
                   Little did I know that I'd embark on a journey that'd require 
